<resources>
    <string name="app_name">AmbuCare</string>
    <string name="moto">With just a few clicks an ambulance will reach you right away</string>
    <string name="getStarted">Get Started</string>
    <string name="findYour">Find your</string>
    <string name="ambulance">Ambulance</string>
    <string name="signIn">Sign In</string>
    <string name="phoneHint">Phone Number</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="proceed">Proceed</string>
    <string name="firstNameHint">First name</string>
    <string name="lastNameHint">Last name</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm password</string>
    <string name="medicalRecord">Medical record</string>
    <string name="dateOfBirthHint">Date of birth</string>
    <string name="medicalCondition">Please specify any medical conditions</string>
    <string name="nationalID">National ID</string>
    <string name="congratulations">Congratulations!</string>
    <string name="accountSet">Your account is set and ready to use.</string>
    <string name="start">Let\'s start</string>
    <string name="city">City</string>
    <string name="streetName">Street name</string>
    <string name="building">Building</string>
    <string name="floor">Floor</string>
    <string name="apartment">Apartment</string>
    <string name="confirmSavedAddress">Confirm saved address</string>
    <string name="saveProfile">Save</string>
    <string name="profile">Profile</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>