<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_address_popup"
    android:layout_width="400dp"
    android:layout_height="450dp"
    android:padding="16dp"
    android:background="@drawable/rounded_popup"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circle_image_background"
        android:padding="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:src="@drawable/avatar"/>

    <EditText
        android:id="@+id/city_editText"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:paddingLeft="10dp"
        android:layout_gravity="center"
        android:elevation="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/edit_text_rounded"
        android:hint="@string/city"
        android:layout_marginBottom="15dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/street_editText"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:paddingLeft="10dp"
        android:layout_gravity="center"
        android:elevation="8dp"
        android:background="@drawable/edit_text_rounded"
        android:hint="@string/streetName"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="15dp"
        android:inputType="text"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <EditText
            android:id="@+id/building_editText"
            android:layout_width="30dp"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_rounded"
            android:paddingLeft="10dp"
            android:elevation="8dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:hint="@string/building"
            android:inputType="number"/>

        <EditText
            android:id="@+id/floor_editText"
            android:layout_width="30dp"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_rounded"
            android:paddingLeft="10dp"
            android:elevation="8dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:hint="@string/floor"
            android:inputType="number"/>

        <EditText
            android:id="@+id/apartment_editText"
            android:layout_width="30dp"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_rounded"
            android:paddingLeft="10dp"
            android:elevation="8dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:hint="@string/apartment"
            android:inputType="number"/>

    </LinearLayout>

    <TextView
        android:id="@+id/confirmAddress"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button"
        android:elevation="8dp"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/confirmSavedAddress"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>

</LinearLayout>
