<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="263dp"
    android:layout_height="344dp"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/rounded_popup"
    android:orientation="vertical"
    android:elevation="8dp">
    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="20dp"
        android:background="@drawable/circle_image_background"
        android:src="@drawable/avatar"
        android:scaleType="centerCrop"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#2155cd"
        android:fontFamily="monospace"
        android:textSize="23sp"
        android:text="@string/congratulations"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accountSet"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginBottom="15dp"/>
    <TextView
        android:id="@+id/startButton"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button"
        android:elevation="8dp"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold" />


</LinearLayout>
