<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".SignInActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:alpha="0.7"
        android:background="@drawable/circle_shape"
        android:elevation="8dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button"
        android:elevation="8dp"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.881" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/medicalRecord"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/backButton" />


    <EditText
        android:id="@+id/profileEmail"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/edit_text_rounded"
        android:elevation="8dp"
        android:ems="10"
        android:hint="@string/phoneHint"
        android:inputType="phone"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthDate" />

    <EditText
        android:id="@+id/nationalID"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_rounded"
        android:elevation="8dp"
        android:ems="10"
        android:hint="@string/nationalID"
        android:inputType="number"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/radio_rounded"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmail">

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:button="@drawable/selector"
            android:checked="true"
            android:gravity="center"
            android:text="Male" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:button="@drawable/selector"
            android:gravity="center"
            android:text="Female" />

        <RadioButton
            android:id="@+id/otherRadioButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:button="@drawable/selector"
            android:gravity="center"
            android:text="Other" />

    </RadioGroup>

    <EditText
        android:id="@+id/birthDate"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/edit_text_rounded"
        android:elevation="8dp"
        android:ems="10"
        android:hint="@string/dateOfBirthHint"
        android:inputType="date"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="@+id/profileEmail"
        app:layout_constraintStart_toStartOf="@+id/profileEmail"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/medicalCondition"
        android:layout_width="310dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_rounded"
        android:elevation="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/medicalCondition"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nationalID" />

</androidx.constraintlayout.widget.ConstraintLayout>